@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLDecoder;
 
+import org.apache.commons.lang.CharEncoding;
 import org.apache.log4j.Logger;
 
 import com.webobjects.appserver.WOApplication;
@@ -95,6 +96,7 @@ public class ERXStaticResourceRequestHandler extends WORequestHandler {
 		return _documentRoot;
 	}
 
+	@Override
 	public WOResponse handleRequest(WORequest request) {
 		WOResponse response = null;
 		FileInputStream is = null;
@@ -150,7 +152,7 @@ public class ERXStaticResourceRequestHandler extends WORequestHandler {
 				if (request.userInfo() != null && !request.userInfo().containsKey("HttpServletRequest")) {
 					/* PATH_INFO is already decoded by the servlet container */
 					path = path.replace('+', ' ');
-					path = URLDecoder.decode(path, "UTF-8");
+					path = URLDecoder.decode(path, CharEncoding.UTF_8);
 				}
 				file = new File(path);
 				length = file.length();
